# financify

./: CHANGELOG.md  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: changelog_updates.yml  on_release_branch.yml  poetry_run_tox  pr_ci.yml
financify/: __ci__.py  __wash_sale_detector__.py
financify/configs/: wash_sale_detector.yml
financify/dummy_data/: wash_sale_example.xlsx
