[tool.poetry]
name = "financify"
version = "0.2.0"
description = "Financial math tools"
authors = ["Jonathan Cook <jcookbme@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "financify"}]
repository = "https://github.com/JonathanCBU/financify"
homepage = "https://github.com/JonathanCBU/financify"

[tool.poetry.scripts]
ci = "financify.__ci__:main"

[tool.poetry.dependencies]
python = "^3.10"
pylightxl = "^1.61"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
tox = "^4.0.16"
virtualenv = "20.21.0"
bandit = "^1.7.1"
black = {version = "^22.12.0", allow-prereleases = true}
isort = {extras = ["colors"], version = "^5.11.4"}
robotframework-tidy = "^3.3.2"
mypy = "^0.991"
mypy-extensions = "^0.4.3"
pylint = "^2.15.9"
toml = "^0.10.2"
ipython = "*"

[tool.black]
target-version = ["py310"]
line-length = 88
color = true
exclude = "autogen"

[tool.isort]
py_version = 310
line_length = 88
profile = "black"
color_output = true
indent = 4

[tool.robotidy]
verbose = false

[tool.mypy]
python_version = "3.10"
pretty = true
show_traceback = true
color_output = true
ignore_missing_imports = true
strict = true

[tool.pylint]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
